--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,5 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-micromath = { version = "2.1.0", features = ["vector"] }
+micromath = { version = "2.1.0", features = ["vector", "quaternion"] }
 minifb = { version = "0.27.0", default-features = false }
