--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,40 @@
 [package]
 name = "pixels-rs"
 version = "0.1.0"
-edition = "2024"
+edition = "2021"
 
 [dependencies]
-line_drawing = "1.0.0"
+esp-backtrace = { version = "0.14.1", features = [
+    "esp32s3",
+    "exception-handler",
+    "panic-handler",
+    "defmt",
+] }
+esp-hal = { version = "0.22.0", features = ["esp32s3", "defmt", "octal-psram"] }
+esp-alloc = { version = "0.5.0" }
+heapless = { version = "0.8.0", default-features = false, features = [
+    "defmt-03",
+] }
+defmt = "0.3.8"
+defmt-rtt = "0.4.1"
+mipidsi = "0.8.0"
+display-interface-parallel-gpio = "0.7.0"
+embedded-graphics = { version = "0.8.1", features = ["defmt"] }
+embedded-hal = { version = "1.0.0", features = ["defmt-03"] }
 micromath = { version = "2.1.0", features = ["vector", "quaternion"] }
-minifb = { version = "0.27.0", default-features = false }
+embedded-graphics-framebuf = "0.5.0"
+display-interface = { version = "0.5.0", features = ["defmt-03"] }
+
+[profile.dev]
+# Rust debug is too slow.
+# For debug builds always builds with some optimization
+opt-level = "s"
+
+[profile.release]
+codegen-units = 1        # LLVM can perform better optimizations using a single thread
+debug = 2
+debug-assertions = false
+incremental = false
+lto = 'fat'
+opt-level = 's'
+overflow-checks = false
