--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,7 +21,7 @@ defmt = "0.3.8"
 defmt-rtt = "0.4.1"
 mipidsi = "0.8.0"
 embedded-graphics-core = { version = "0.4.0", features = ["defmt"] }
-display-interface-spi = "0.5.0"
+esp-display-interface-spi-dma = { version = "0.2.0", features = ["esp32s3"] }
 embedded-graphics = { version = "0.8.1", features = ["defmt"] }
 embedded-hal-bus = { version = "0.2.0", features = ["defmt-03"] }
 embassy-embedded-hal = { version = "0.2.0", default-features = false, features = [
@@ -40,7 +40,6 @@ embedded-hal = { version = "1.0.0", features = ["defmt-03"] }
 micromath = { version = "2.1.0", features = ["vector", "quaternion"] }
 embedded-graphics-framebuf = "0.5.0"
 display-interface = { version = "0.5.0", features = ["defmt-03"] }
-static_cell = "2.1.0"
 
 [profile.dev]
 # Rust debug is too slow.
