--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,6 @@ embassy-time = { version = "0.3.1", features = ["defmt"] }
 defmt = "0.3.8"
 defmt-rtt = "0.4.1"
 mipidsi = "0.8.0"
-esp-display-interface-spi-dma = { version = "0.2.0", features = ["esp32s3"] }
 embedded-graphics = { version = "0.8.1", features = ["defmt"] }
 embassy-executor = { version = "0.6.0", features = [
     "task-arena-size-163840",
@@ -35,6 +34,8 @@ embedded-hal = { version = "1.0.0", features = ["defmt-03"] }
 micromath = { version = "2.1.0", features = ["vector", "quaternion"] }
 embedded-graphics-framebuf = "0.5.0"
 display-interface = { version = "0.5.0", features = ["defmt-03"] }
+display-interface-spi = "0.5.0"
+embedded-hal-bus = { version = "0.2.0", features = ["defmt-03"] }
 
 [profile.dev]
 # Rust debug is too slow.
