--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,8 +34,9 @@ embedded-hal = { version = "1.0.0", features = ["defmt-03"] }
 micromath = { version = "2.1.0", features = ["vector", "quaternion"] }
 embedded-graphics-framebuf = "0.5.0"
 display-interface = { version = "0.5.0", features = ["defmt-03"] }
-display-interface-spi = "0.5.0"
 embedded-hal-bus = { version = "0.2.0", features = ["defmt-03"] }
+byte-slice-cast = { version = "1.2.2", default-features = false }
+num-traits = { version = "0.2.19", default-features = false, features = ["libm"] }
 
 [profile.dev]
 # Rust debug is too slow.
