--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,9 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-mipidsi = { git = "https://github.com/almindor/mipidsi.git", branch = "v0.9.0", features = [
-    "batch",
-] }
+mipidsi = { version = "0.9.0", features = ["batch"] }
 s3-display-amoled-touch-drivers = { git = "https://github.com/psytraxx/s3-display-amoled-touch-rs.git", branch = "main" }
 esp-backtrace = { version = "0.14.1", features = [
     "esp32s3",
