--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,8 +1,8 @@
 [target.xtensa-esp32s3-none-elf]
-runner = "probe-rs run --chip=esp32s3"
+runner = "espflash flash --monitor"
 
 [env]
-DEFMT_LOG = "info"
+ESP_LOG = "info"
 ESP_WIFI_COUNTRY_CODE = "DE"
 ESP_HAL_PLACE_SPI_DRIVER_IN_RAM = "true"
 
