--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,26 +10,24 @@ esp-backtrace = { version = "0.14.1", features = [
     "esp32s3",
     "exception-handler",
     "panic-handler",
-    "defmt",
+    "println",
 ] }
-embassy-sync = { version = "0.6.1", features = ["defmt"] }
-esp-hal = { version = "0.22.0", features = ["esp32s3", "defmt", "octal-psram"] }
+embassy-sync = { version = "0.6.1", features = ["log"] }
+esp-hal = { version = "0.22.0", features = ["esp32s3", "log", "octal-psram"] }
 esp-alloc = { version = "0.5.0" }
-heapless = { version = "0.8.0", default-features = false, features = [
-    "defmt-03",
-] }
-defmt = "0.3.8"
-defmt-rtt = "0.4.1"
-embedded-graphics = { version = "0.8.1", features = ["defmt"] }
+heapless = { version = "0.8.0", default-features = false, features = [] }
+esp-println = { version = "0.12.0", features = ["esp32s3", "log"] }
+log = { version = "0.4.21" }
+embedded-graphics = { version = "0.8.1", features = [] }
 embassy-executor = { version = "0.6.0", features = [
     "task-arena-size-163840",
-    "defmt",
+    "log",
 ] }
-esp-hal-embassy = { version = "0.5.0", features = ["esp32s3", "defmt"] }
-embedded-hal = { version = "1.0.0", features = ["defmt-03"] }
+esp-hal-embassy = { version = "0.5.0", features = ["esp32s3", "log"] }
+embedded-hal = { version = "1.0.0", features = [] }
 micromath = { version = "2.1.0", features = ["vector", "quaternion"] }
 embedded-graphics-framebuf = "0.5.0"
-embedded-hal-bus = { version = "0.2.0", features = ["defmt-03"] }
+embedded-hal-bus = { version = "0.2.0", features = [] }
 byte-slice-cast = { version = "1.2.2", default-features = false }
 num-traits = { version = "0.2.19", default-features = false, features = [
     "libm",
