--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,26 +4,26 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-mipidsi = { version = "0.9.0", features = ["batch"] }
+mipidsi = { git = "https://github.com/almindor/mipidsi.git", branch = "master" }
 s3-display-amoled-touch-drivers = { git = "https://github.com/psytraxx/s3-display-amoled-touch-rs.git", branch = "main" }
-esp-backtrace = { version = "0.14.1", features = [
+esp-backtrace = { version = "0.15.0", features = [
     "esp32s3",
     "exception-handler",
     "panic-handler",
     "println",
 ] }
 embassy-sync = { version = "0.6.1", features = ["log"] }
-esp-hal = { version = "0.22.0", features = ["esp32s3", "log", "octal-psram"] }
-esp-alloc = { version = "0.5.0" }
+esp-hal = { version = "0.23.0", features = ["esp32s3", "log", "octal-psram"] }
+esp-alloc = { version = "0.6.0" }
 heapless = { version = "0.8.0", default-features = false, features = [] }
-esp-println = { version = "0.12.0", features = ["esp32s3", "log"] }
+esp-println = { version = "0.13.0", features = ["esp32s3", "log"] }
 log = { version = "0.4.21" }
 embedded-graphics = { version = "0.8.1", features = [] }
-embassy-executor = { version = "0.6.0", features = [
+embassy-executor = { version = "0.7.0", features = [
     "task-arena-size-163840",
     "log",
 ] }
-esp-hal-embassy = { version = "0.5.0", features = ["esp32s3", "log"] }
+esp-hal-embassy = { version = "0.6.0", features = ["esp32s3", "log"] }
 embedded-hal = { version = "1.0.0", features = [] }
 micromath = { version = "2.1.0", features = ["vector", "quaternion"] }
 embedded-graphics-framebuf = "0.5.0"
