--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,24 +10,24 @@ esp-backtrace = { version = "0.15.0", features = [
     "esp32s3",
     "exception-handler",
     "panic-handler",
-    "println",
+    "defmt",
 ] }
-embassy-sync = { version = "0.6.1", features = ["log"] }
-esp-hal = { version = "0.23.0", features = ["esp32s3", "log", "octal-psram"] }
+embassy-sync = { version = "0.6.1", features = ["defmt"] }
+esp-hal = { version = "0.23.0", features = ["esp32s3", "defmt", "octal-psram"] }
 esp-alloc = { version = "0.6.0" }
 heapless = { version = "0.8.0", default-features = false, features = [] }
-esp-println = { version = "0.13.0", features = ["esp32s3", "log"] }
-log = { version = "0.4.21" }
+defmt = "0.3.8"
+defmt-rtt = "0.4.1"
 embedded-graphics = { version = "0.8.1", features = [] }
 embassy-executor = { version = "0.7.0", features = [
     "task-arena-size-163840",
-    "log",
+    "defmt",
 ] }
-esp-hal-embassy = { version = "0.6.0", features = ["esp32s3", "log"] }
-embedded-hal = { version = "1.0.0", features = [] }
+esp-hal-embassy = { version = "0.6.0", features = ["esp32s3", "defmt"] }
+embedded-hal = { version = "1.0.0", features = ["defmt-03"] }
 micromath = { version = "2.1.0", features = ["vector", "quaternion"] }
 embedded-graphics-framebuf = "0.5.0"
-embedded-hal-bus = { version = "0.2.0", features = [] }
+embedded-hal-bus = { version = "0.2.0", features = ["defmt-03"] }
 byte-slice-cast = { version = "1.2.2", default-features = false }
 num-traits = { version = "0.2.19", default-features = false, features = [
     "libm",
