--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,18 +12,17 @@ esp-backtrace = { version = "0.15.0", features = [
     "panic-handler",
     "defmt",
 ] }
-embassy-sync = { version = "0.6.1", features = ["defmt"] }
-esp-hal = { version = "0.23.0", features = ["esp32s3", "defmt", "octal-psram"] }
+esp-hal = { version = "0.23.0", default-features = false, features = [
+    "esp32s3",
+    "defmt",
+    "octal-psram",
+    "unstable",
+] }
 esp-alloc = { version = "0.6.0" }
 heapless = { version = "0.8.0", default-features = false, features = [] }
 defmt = "0.3.8"
 defmt-rtt = "0.4.1"
-embedded-graphics = { version = "0.8.1", features = [] }
-embassy-executor = { version = "0.7.0", features = [
-    "task-arena-size-163840",
-    "defmt",
-] }
-esp-hal-embassy = { version = "0.6.0", features = ["esp32s3", "defmt"] }
+embedded-graphics = { version = "0.8.1", features = ["defmt"] }
 embedded-hal = { version = "1.0.0", features = ["defmt-03"] }
 micromath = { version = "2.1.0", features = ["vector", "quaternion"] }
 embedded-graphics-framebuf = "0.5.0"
