Refactor touch event handling to use enum for improved clarity and maintainability

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 [dependencies]
 #switch to official mipi-dsi crate when newer version that 0.9.0 is released
 mipidsi = { git = "https://github.com/almindor/mipidsi.git", branch = "master" }
-s3-display-amoled-touch-drivers = { git = "https://github.com/psytraxx/s3-display-amoled-touch-rs.git", branch = "main" }
+s3-display-amoled-touch = { git = "https://github.com/psytraxx/s3-display-amoled-touch-rs.git", branch = "touch" }
 esp-backtrace = { version = "0.15.0", features = [
     "esp32s3",
     "exception-handler",
