--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -5,6 +5,7 @@ runner = "probe-rs run --chip=esp32s3"
 DEFMT_LOG = "info"
 ESP_WIFI_COUNTRY_CODE = "DE"
 ESP_HAL_PLACE_SPI_DRIVER_IN_RAM = "true"
+ESP_HAL_CONFIG_PSRAM_MODE = "octal"
 
 [build]
 rustflags = ["-C", "link-arg=-nostartfiles"]
