--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 [dependencies]
 #switch to official mipi-dsi crate when newer version that 0.9.0 is released
 mipidsi = { git = "https://github.com/almindor/mipidsi.git", branch = "master" }
-drivers = { git = "https://github.com/psytraxx/s3-display-amoled-touch-rs.git", tag = "v0.4.0" }
+drivers = { git = "https://github.com/psytraxx/s3-display-amoled-touch-rs.git", tag = "v0.5.1" }
 esp-backtrace = { version = "0.15.1", features = [
     "esp32s3",
     "exception-handler",
@@ -17,18 +17,21 @@ esp-hal = { version = "0.23.1", default-features = false, features = [
     "esp32s3",
     "octal-psram",
     "unstable",
+    "log",
 ] }
 esp-alloc = { version = "0.7.0" }
 heapless = { version = "0.8.0", default-features = false, features = [] }
-esp-println = { version = "0.13.1", features = ["log", "esp32s3"] }
+esp-println = { version = "0.13.1", features = ["esp32s3", "log"] }
 embedded-graphics = { version = "0.8.1", features = [] }
 embedded-hal = { version = "1.0.0", features = [] }
 micromath = { version = "2.1.0", features = ["vector", "quaternion"] }
 embedded-graphics-framebuf = "0.5.0"
+static_cell = "2.1.1"
 embedded-hal-bus = { version = "0.3.0", features = [] }
 num-traits = { version = "0.2.19", default-features = false, features = [
     "libm",
 ] }
+log = "0.4.27"
 
 [profile.dev]
 # Rust debug is too slow.
