--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 #switch to official mipi-dsi crate when newer version that 0.9.0 is released
 mipidsi = { git = "https://github.com/almindor/mipidsi.git", branch = "master" }
 drivers = { git = "https://github.com/psytraxx/s3-display-amoled-touch-rs.git", tag = "v0.5.1" }
-esp-backtrace = { version = "0.15.1", features = [
+esp-backtrace = { version = "0.16.0", features = [
     "esp32s3",
     "exception-handler",
     "panic-handler",
@@ -19,9 +19,9 @@ esp-hal = { version = "0.23.1", default-features = false, features = [
     "unstable",
     "log",
 ] }
-esp-alloc = { version = "0.7.0" }
+esp-alloc = { version = "0.8.0" }
 heapless = { version = "0.8.0", default-features = false, features = [] }
-esp-println = { version = "0.13.1", features = ["esp32s3", "log"] }
+esp-println = { version = "0.14.0", features = ["esp32s3", "log-04"] }
 embedded-graphics = { version = "0.8.1", features = [] }
 embedded-hal = { version = "1.0.0", features = [] }
 micromath = { version = "2.1.0", features = ["vector", "quaternion"] }
