--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,11 +14,11 @@ esp-backtrace = { version = "0.16.0", features = [
     "panic-handler",
     "println",
 ] }
-esp-hal = { version = "0.23.1", default-features = false, features = [
+esp-hal = { version = "1.0.0-beta.1", default-features = false, features = [
     "esp32s3",
-    "octal-psram",
+    "psram",
     "unstable",
-    "log",
+    "log-04",
 ] }
 esp-alloc = { version = "0.8.0" }
 heapless = { version = "0.8.0", default-features = false, features = [] }
