--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+esp-bootloader-esp-idf = "0.1.0"
 #switch to official mipi-dsi crate when newer version that 0.9.0 is released
 mipidsi = { git = "https://github.com/almindor/mipidsi.git", branch = "master" }
 drivers = { git = "https://github.com/psytraxx/s3-display-amoled-touch-rs.git", tag = "v0.5.1" }
@@ -26,7 +27,7 @@ embedded-graphics = { version = "0.8.1", features = [] }
 embedded-hal = { version = "1.0.0", features = [] }
 micromath = { version = "2.1.0", features = ["vector", "quaternion"] }
 embedded-graphics-framebuf = "0.5.0"
-static_cell = "2.1.1"
+static_cell = { version = "2.1.0", features = ["nightly"] }
 embedded-hal-bus = { version = "0.3.0", features = [] }
 num-traits = { version = "0.2.19", default-features = false, features = [
     "libm",
