--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,6 +1,7 @@
 {
     "recommendations": [
         "rust-lang.rust-analyzer",
-        "probe-rs.probe-rs-debugger",
+        "fill-labs.dependi",
+        "statiolake.vscode-rustfmt"
     ]
 }
