--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,17 +4,17 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-esp-bootloader-esp-idf = "0.1.0"
+esp-bootloader-esp-idf = { version = "0.2.0", features = ["esp32s3", "log-04"] }
 #switch to official mipi-dsi crate when newer version that 0.9.0 is released
 mipidsi = { git = "https://github.com/almindor/mipidsi.git", branch = "master" }
 drivers = { git = "https://github.com/psytraxx/s3-display-amoled-touch-rs.git", tag = "v0.5.1" }
-esp-backtrace = { version = "0.16.0", features = [
+esp-backtrace = { version = "0.17.0", features = [
     "esp32s3",
     "exception-handler",
     "panic-handler",
     "println",
 ] }
-esp-hal = { version = "1.0.0-beta.1", default-features = false, features = [
+esp-hal = { version = "1.0.0-rc.0", features = [
     "esp32s3",
     "psram",
     "unstable",
@@ -22,7 +22,7 @@ esp-hal = { version = "1.0.0-beta.1", default-features = false, features = [
 ] }
 esp-alloc = { version = "0.8.0" }
 heapless = { version = "0.8.0", default-features = false, features = [] }
-esp-println = { version = "0.14.0", features = ["esp32s3", "log-04"] }
+esp-println = { version = "0.15.0", features = ["esp32s3", "log-04"] }
 embedded-graphics = { version = "0.8.1", features = [] }
 embedded-hal = { version = "1.0.0", features = [] }
 micromath = { version = "2.1.0", features = ["vector", "quaternion"] }
