--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,35 +4,34 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-esp-bootloader-esp-idf = "0.1.0"
+esp-bootloader-esp-idf = { version = "0.2.0", features = ["esp32s3", "log-04"] }
 #switch to official mipi-dsi crate when newer version that 0.9.0 is released
 mipidsi = { git = "https://github.com/almindor/mipidsi.git", branch = "master" }
-drivers = { git = "https://github.com/psytraxx/s3-display-amoled-touch-rs.git", tag = "v0.5.1" }
-esp-backtrace = { version = "0.16.0", features = [
+drivers = { git = "https://github.com/psytraxx/s3-display-amoled-touch-rs.git", tag = "v0.7.0" }
+esp-backtrace = { version = "0.17.0", features = [
     "esp32s3",
     "exception-handler",
     "panic-handler",
     "println",
 ] }
-esp-hal = { version = "0.23.1", default-features = false, features = [
+esp-hal = { version = "1.0.0-rc.0", features = [
     "esp32s3",
-    "octal-psram",
+    "psram",
     "unstable",
-    "log",
+    "log-04",
 ] }
-esp-alloc = { version = "0.8.0" }
 heapless = { version = "0.8.0", default-features = false, features = [] }
-esp-println = { version = "0.14.0", features = ["esp32s3", "log-04"] }
+esp-alloc = { version = "0.8.0" }
+esp-println = { version = "0.15.0", features = ["esp32s3", "log-04"] }
 embedded-graphics = { version = "0.8.1", features = [] }
 embedded-hal = { version = "1.0.0", features = [] }
 micromath = { version = "2.1.0", features = ["vector", "quaternion"] }
-embedded-graphics-framebuf = "0.5.0"
-static_cell = { version = "2.1.0", features = ["nightly"] }
+static_cell = { version = "2.1.1", features = ["nightly"] }
 embedded-hal-bus = { version = "0.3.0", features = [] }
 num-traits = { version = "0.2.19", default-features = false, features = [
     "libm",
 ] }
-log = "0.4.27"
+log = "0.4.28"
 
 [profile.dev]
 # Rust debug is too slow.
