--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,13 +22,6 @@ esp-rtos = { version = "0.1.1", features = [
 esp-bootloader-esp-idf = { version = "0.3.0", features = ["esp32s3"] }
 log = "0.4.27"
 
-embassy-net = { version = "0.7.0", features = [
-    "dhcpv4",
-    "log",
-    "medium-ethernet",
-    "tcp",
-    "udp",
-] }
 embedded-io = "0.7.1"
 embedded-io-async = "0.7.0"
 esp-alloc = "0.9.0"
@@ -44,7 +37,9 @@ embassy-time = { version = "0.5.0", features = ["log"] }
 
 #switch to official mipi-dsi crate when newer version that 0.9.0 is released
 mipidsi = { git = "https://github.com/almindor/mipidsi.git", branch = "master" }
-drivers = { git = "https://github.com/psytraxx/s3-display-amoled-touch-rs.git", tag = "v0.8.0" }
+drivers = { git = "https://github.com/psytraxx/s3-display-amoled-touch-rs.git", tag = "v0.9.0", features = [
+    "log-04",
+] }
 embedded-graphics = { version = "0.8.1", features = [] }
 embedded-hal = { version = "1.0.0", features = [] }
 micromath = { version = "2.1.0", features = ["vector", "quaternion"] }
