--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,8 +35,7 @@ esp-println = { version = "0.16.0", features = ["esp32s3", "log-04"] }
 embassy-executor = { version = "0.9.0", features = ["log"] }
 embassy-time = { version = "0.5.0", features = ["log"] }
 
-#switch to official mipi-dsi crate when newer version that 0.9.0 is released
-mipidsi = { git = "https://github.com/almindor/mipidsi.git", branch = "master" }
+lcd-async = "0.1.1"
 drivers = { git = "https://github.com/psytraxx/s3-display-amoled-touch-rs.git", tag = "v0.9.0", features = [
     "log-04",
 ] }
@@ -48,6 +47,8 @@ embedded-hal-bus = { version = "0.3.0", features = [] }
 num-traits = { version = "0.2.19", default-features = false, features = [
     "libm",
 ] }
+embassy-embedded-hal = "0.5.0"
+embassy-sync = { version = "0.7.2", features = ["log"] }
 
 [profile.dev]
 # Rust debug is too slow.
