--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,7 @@ esp-rtos = { version = "0.2.0", features = [
 ] }
 
 esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32s3", "log-04"] }
-log = "0.4.27"
+log = "0.4.28"
 
 embedded-io = "0.7.1"
 embedded-io-async = "0.7.0"
@@ -32,19 +32,20 @@ esp-backtrace = { version = "0.18.1", features = [
 ] }
 esp-println = { version = "0.16.1", features = ["esp32s3", "log-04"] }
 # for more networking protocol support see https://crates.io/crates/edge-net
-embassy-executor = { version = "0.9.0", features = ["log"] }
+embassy-executor = { version = "0.9.1", features = ["log"] }
 embassy-time = { version = "0.5.0", features = ["log"] }
+embassy-futures = { version = "0.1.1" }
 
 #switch to official mipi-dsi crate when newer version that 0.9.0 is released
 mipidsi = { git = "https://github.com/almindor/mipidsi.git", branch = "master" }
-drivers = { git = "https://github.com/psytraxx/s3-display-amoled-touch-rs.git", tag = "v0.10.1", features = [
-    "log-04",
+drivers = { git = "https://github.com/psytraxx/s3-display-amoled-touch-rs.git", tag = "v0.14.0", package="drivers", features = [
+    "log-04", "async"
 ] }
 embedded-graphics = { version = "0.8.1", features = [] }
 embedded-hal = { version = "1.0.0", features = [] }
 micromath = { version = "2.1.0", features = ["vector", "quaternion"] }
 static_cell = { version = "2.1.1", features = ["nightly"] }
-embedded-hal-bus = { version = "0.3.0", features = [] }
+embedded-hal-bus = { version = "0.3.0", features = ["async"] }
 num-traits = { version = "0.2.19", default-features = false, features = [
     "libm",
 ] }
