--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,9 +35,6 @@ esp-println = { version = "0.16.1", features = ["esp32s3", "log-04"] }
 embassy-executor = { version = "0.9.1", features = ["log"] }
 embassy-time = { version = "0.5.0", features = ["log"] }
 embassy-futures = { version = "0.1.1" }
-
-#switch to official mipi-dsi crate when newer version that 0.9.0 is released
-mipidsi = { git = "https://github.com/almindor/mipidsi.git", branch = "master" }
 drivers = { git = "https://github.com/psytraxx/s3-display-amoled-touch-rs.git", tag = "v0.14.1", package = "drivers", features = [
     "log-04",
     "async",
@@ -50,6 +47,7 @@ embedded-hal-bus = { version = "0.3.0", features = ["async"] }
 num-traits = { version = "0.2.19", default-features = false, features = [
     "libm",
 ] }
+lcd-async = "0.1.1"
 
 [profile.dev]
 # Rust debug is too slow.
